--- a/learntoprogram/python-Language-Reference.ipynb
+++ b/learntoprogram/python-Language-Reference.ipynb
@@ -108,6 +108,15 @@
     "# python Built-in Functions next()\n",
     "print(next(generator)) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(generator.send(2))"
+   ]
   }
  ],
  "metadata": {
